# hallucination_research

./: .gitignore  260115_meeting.md  260116_plan.md  260120_plan.md  260121_summary.md  260203.md  260206_meeting.md  README.md  plan.md  pyproject.toml  run_experiment.py
experiment_notes/: run_all_experiments.py  thesis_200_analysis.json
experiment_notes/exp01_truthfulqa/: results.json  run_experiment.py
experiment_notes/exp02_halueval/: results.json  run_experiment.py
experiment_notes/exp03_analysis/: analysis_report.md
experiment_notes/exp04_corpus_adaptive/: analysis_results_20260120_230157.json  halueval_with_corpus.json  run_full_analysis.py  truthfulqa_with_corpus.json
experiment_notes/exp05_quintile_analysis/: CONCLUSION.md  halueval_with_corpus.json  quintile_analysis.ipynb  quintile_analysis_executed.ipynb  truthfulqa_with_corpus.json
experiment_notes/exp06_weight_classifier/: RESULTS.md  combined_features.csv  combined_models.pkl  combined_test.csv  combined_train.csv  combined_val.csv  evaluate.py  evaluation_results.csv  halueval_features.csv  halueval_models.pkl  halueval_test.csv  halueval_train.csv  (+8 more)
figures/: generate_all.py
references/: KLE_summary_korean.md  cleanse_summary_korean.md  literature_review_summary.md  mllm_hallucination_survey_summary_kr.md  quco_rag_summary_korean.md  snne-paper-summary-kr.md
scripts/: add_corpus_stats.py  analyze_by_corpus_bin.py  compare_baselines.py
study/: basic_concepts.md
thesis/: PROGRESS.md  README.md  figures_tikz.tex  main.aux  main.lof  main.lot  main.tex  main.toc  sample_under.tex
(+23 files in other folders)
