[project]
name = "hallucination-lfe"
version = "0.1.0"
description = "LLM Hallucination Detection via Hybrid Free Energy (HFE)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "sharosoo"}
]
keywords = ["llm", "hallucination", "detection", "free-energy", "nlp"]

dependencies = [
    "hfe-core",
    "hfe-datasets",
    "hfe-models",
    "hfe-eval",
    "spacy>=3.8.11",
]

[tool.uv.sources]
hfe-core = { workspace = true }
hfe-datasets = { workspace = true }
hfe-models = { workspace = true }
hfe-eval = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hallucination_lfe"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ruff>=0.7.0",
]
